bugfix: overflow:hidden set on #app, simplized animation and used it on PlayerMax too.

--- a/demo/kugou/src/assets/css/base.less
+++ b/demo/kugou/src/assets/css/base.less
@@ -69,3 +69,8 @@ body {
 .main_border_bottom {
   border-bottom: 1px solid @white-3;
 }
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
